kubernetes/ingress/ingress-host-green.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
    - host: kubeadm-daian-green.datafisio.com.br
      http:
        paths:
        - backend:
            serviceName: green-service
            servicePort: 80
