kubernetes/ingress/ingress-path.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / #para resolver o path e redirecionar para o servico correto
spec:
  rules:
    - host: kubeadm-daian.datafisio.com.br
      http:
        paths:
        - path: /blue
          backend:
            serviceName: blue-service
            servicePort: 80
        - path: /green
          backend:
            serviceName: green-service
            servicePort: 80
